[gd_scene load_steps=2 format=3 uid="uid://c8vy7q1512jol"]

[ext_resource type="Script" path="res://scenes/menus/main_menu/main_menu.gd" id="1_vumqw"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vumqw")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="TitleLabel" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Whispers of the Carnival"
horizontal_alignment = 1

[node name="ButtonContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="PlayButton" type="Button" parent="MarginContainer/ButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Play"

[node name="SettingsButton" type="Button" parent="MarginContainer/ButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Settings"

[node name="CreditsButton" type="Button" parent="MarginContainer/ButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Credits"

[node name="QuitButton" type="Button" parent="MarginContainer/ButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Quit"
